feat: add endpoint to delete existing deck
